Prevent table overflowing top of viewport

--- a/cards.css
+++ b/cards.css
@@ -3,6 +3,7 @@
 body {
 	width: 668px;
 	height: 400px;
+	max-height: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
